<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bbd_programmatic_activation_UI">
    
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <TextView
	        android:id="@+id/textviewTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/trust_message_waitingForAuthRequest" />
		
	    <Button
		    android:id="@+id/buttonCorrectPassword"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onCorrectPassword"
		    android:text="@string/trust_action_correctPassword" />
	    
		<Button
		    android:id="@+id/buttonIncorrectPassword"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onIncorrectPassword"
		    android:text="@string/trust_action_incorrectPassword" />
		
		<Button
		    android:id="@+id/buttonChangePassword"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onChangePassword"
		    android:text="@string/trust_action_changePassword" />	
		
		<Button
		    android:id="@+id/buttonWipeDevice"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onWipe"
		    android:text="@string/trust_action_wipe" />
		
		<Button
		    android:id="@+id/buttonStartTemporaryLock"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onStartTemporaryLock"
		    android:text="@string/trust_action_startTemporaryLock" />
		
		<Button
		    android:id="@+id/buttonBlock"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onBlock"
		    android:text="@string/trust_action_block" />
		
		<Button
		    android:id="@+id/buttonBlockUnblock"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onBlockAndUnblockAfter10Secs"
		    android:text="@string/trust_action_blockAndUnblockAfter10Seconds" />
		
		<Button
		    android:id="@+id/buttonIdleLock"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onIdleLock"
		    android:text="@string/trust_action_idleLock" />
		
		<Button
		    android:id="@+id/buttonSecurityPolicy"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:onClick="onGetSecurityPolicy"
		    android:text="@string/trust_action_getSecurityPolicy" />
		
		<TextView
		    android:id="@+id/textviewMessage"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:text="@string/trust_message_empty" />
		
	</LinearLayout>
</ScrollView>
