<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/heading"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white" />
    
    <TextView
            android:id="@+id/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/login_option"
            android:textStyle="bold"
            android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_background"
        android:hint="@string/button2_hint"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_background"
        android:hint="@string/button1_hint"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>
